metadata/SummerGarden/objects/Plant__c.object
<CustomObject>
    <description>Represent plants using auto numbering (because Peter wanted to)</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age of the plant based on when it was planted</description>
        <formula>TODAY() - Date_planted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The age of the plant based on when it was planted</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_cultivated__c</fullName>
        <label>Date cultivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_planted__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The day the seeds for the plant were sown</description>
        <inlineHelpText>The day the seeds for the plant were sown</inlineHelpText>
        <label>Date planted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_watered__c</fullName>
        <description>The date the plant was last watered at a particular plot</description>
        <inlineHelpText>The date the plant was last watered at a particular plot</inlineHelpText>
        <label>Last watered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PH_of_Soil__c</fullName>
        <description>The ph balance of the soil when planted</description>
        <inlineHelpText>The ph balance of the soil when planted</inlineHelpText>
        <label>PH of Soil</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <description>Get the season of a Plant from variety</description>
        <formula>TEXT(Variety__r.Season__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show the season a variety of plant should be sown</inlineHelpText>
        <label>Variety Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variety__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A loose relationship between plant and variety, plants don&apos;t necessarily need to know the variety, its simply extra information</description>
        <inlineHelpText>Plants have a variety to help understand what kind of thing a particular plant is</inlineHelpText>
        <label>Variety</label>
        <referenceTo>Variety__c</referenceTo>
        <relationshipLabel>Plants</relationshipLabel>
        <relationshipName>Plants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Variety__c</columns>
        <columns>Season__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLNT{0000}</displayFormat>
        <label>Plant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PH_balance_within_range_0_and_14</fullName>
        <active>true</active>
        <description>Ensure that a PH balance value is between 0 and 14</description>
        <errorConditionFormula>PH_of_Soil__c &lt; 0  ||  PH_of_Soil__c &gt; 14</errorConditionFormula>
        <errorDisplayField>PH_of_Soil__c</errorDisplayField>
        <errorMessage>The PH Balance value must be between 0 and 14</errorMessage>
    </validationRules>
</CustomObject>